# zero2prod-newsletter

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  dagger.json  go.work  spec.yaml
.cargo/: config.toml
.github/actions/function-call/: action.yaml
.github/workflows/: audit.yaml  general.yaml
.sqlx/: query-4fff5f59ace853e5916e8917a18fffa3daea83d9c40dfcfce9c8df1d6f60b68c.json
config/: base.yaml  ci.yaml  production.yaml
dagger/: dagger.json  go.mod  main.go
migrations/: 20250427004640_create_subscription_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
